体裁を整えた

--- a/test/style.css
+++ b/test/style.css
@@ -37,8 +37,7 @@ h1{
   text-align: center;
 }
 
-#reset {
-  background-color: #ECF2FC;
+#pas {
+  background-color: white;
   border: #ECF2FC;
-  color: #ECF2FC;
 }
